--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ title: 'D3js raster tools tutorial'
 subtitle: 'Painless documentation for your projects'
 
 # if you wish to integrate disqus on pages set your shortname here
-disqus_shortname: ''
+disqus_shortname: 'geoexamples'
 
 # if you use google analytics, add your tracking id here
-google_analytics_id: ''
+google_analytics_id: 'UA-36383259-2'
 
 # Enable/show navigation. There are there options:
 #   0 - always hide
